Update code uses new Java posibilities